--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lazyellis-binary-search-tree",
   "type": "module",
   "version": "1.0.0",
-  "description": "",
+  "description": "This repository contains a JavaScript implementation of a binary search tree (BST).",
   "main": "tree.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
